--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -47,6 +47,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Exercise 1\n",
+        "\n",
+        "# 𝑥2+𝑦2−𝑟2\n",
+        "# x = [1,2,3,4,5,6]\n",
+        "# y = [2,3,4,5,6,7]\n",
+        "# r = [1,1,3,3,4,5]\n",
+        "\n",
+        "def compute_equation(x, y, r):\n",
+        "  \"\"\"\n",
+        "  Computes the equation x^2 + y^2 - r^2 for corresponding values in lists x, y, and r.\n",
+        "\n",
+        "  Args:\n",
+        "      x: List of x values.\n",
+        "      y: List of y values.\n",
+        "      r: List of r values.\n",
+        "\n",
+        "  Returns:\n",
+        "      List of computed equation values.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  equation_values = map(lambda x_val, y_val, r_val: x_val**2 + y_val**2 - r_val**2, x, y, r)\n",
+        "  return list(equation_values)\n",
+        "\n",
+        "# Define the lists\n",
+        "x = [1, 2, 3, 4, 5, 6]\n",
+        "y = [2, 3, 4, 5, 6, 7]\n",
+        "r = [1, 1, 3, 3, 4, 5]\n",
+        "\n",
+        "# Compute and print the equation values\n",
+        "equation_values = compute_equation(x, y, r)\n",
+        "print(equation_values)\n"
+      ],
+      "metadata": {
+        "id": "TOXAEqkOu3HH",
+        "outputId": "cc489d29-fbe1-4b1d-88a7-e48e4ae929af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 12, 16, 32, 45, 60]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jbbvCewW-Zib"
@@ -60,6 +113,88 @@
         "1. using a for-loop,\n",
         "2. using function `map()`, and\n",
         "3. using list comprehensions."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercise 2\n",
+        "\n",
+        "def get_word_lengths_for_loop(words):\n",
+        "  \"\"\"\n",
+        "  Computes the lengths of words in a list using a for-loop.\n",
+        "\n",
+        "  Args:\n",
+        "      words: List of words.\n",
+        "\n",
+        "  Returns:\n",
+        "      List of word lengths.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  word_lengths = []\n",
+        "  for word in words:\n",
+        "    word_lengths.append(len(word))\n",
+        "  return word_lengths\n",
+        "\n",
+        "def get_word_lengths_map(words):\n",
+        "  \"\"\"\n",
+        "  Computes the lengths of words in a list using the map function.\n",
+        "\n",
+        "  Args:\n",
+        "      words: List of words.\n",
+        "\n",
+        "  Returns:\n",
+        "      List of word lengths.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  word_lengths = map(lambda word: len(word), words)\n",
+        "  return list(word_lengths)\n",
+        "\n",
+        "def get_word_lengths_comprehension(words):\n",
+        "  \"\"\"\n",
+        "  Computes the lengths of words in a list using list comprehension.\n",
+        "\n",
+        "  Args:\n",
+        "      words: List of words.\n",
+        "\n",
+        "  Returns:\n",
+        "      List of word lengths.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  word_lengths = [len(word) for word in words]\n",
+        "  return word_lengths\n",
+        "\n",
+        "# Define the list of words\n",
+        "words = ['real', 'rock', 'realize', 'rocket', 'red', 'eraser', '7', '8', '9', '10']\n",
+        "\n",
+        "# Compute the word lengths using different methods\n",
+        "word_lengths_for_loop = get_word_lengths_for_loop(words)\n",
+        "word_lengths_map = get_word_lengths_map(words)\n",
+        "word_lengths_comprehension = get_word_lengths_comprehension(words)\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Word lengths (for-loop):\", word_lengths_for_loop)\n",
+        "print(\"Word lengths (map):\", word_lengths_map)\n",
+        "print(\"Word lengths (list comprehension):\", word_lengths_comprehension)"
+      ],
+      "metadata": {
+        "id": "Te8H4F2jvZhS",
+        "outputId": "98158d04-290b-4686-8987-2de97d7df340",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Word lengths (for-loop): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n",
+            "Word lengths (map): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n",
+            "Word lengths (list comprehension): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n"
+          ]
+        }
       ]
     },
     {
@@ -77,12 +212,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Exercise 3\n",
+        "\n",
+        "def double_first_two_chars(strings):\n",
+        "  \"\"\"\n",
+        "  Creates a list of strings where each element is the first two characters of the corresponding string in the input list, doubled.\n",
+        "\n",
+        "  Args:\n",
+        "      strings: List of strings.\n",
+        "\n",
+        "  Returns:\n",
+        "      List of double first two characters of strings.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  doubled_strings = []\n",
+        "  for string in strings:\n",
+        "    first_two_chars = string[:2]\n",
+        "    doubled_strings.append(first_two_chars * 2)\n",
+        "  return doubled_strings\n",
+        "\n",
+        "# Define the list of strings\n",
+        "strings = ['real', 'rock', 'realize', 'rocket', 'red', 'eraser', '7', '8', '9', '10']\n",
+        "\n",
+        "# Create the list of doubled first two characters\n",
+        "doubled_strings = double_first_two_chars(strings)\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Doubled first two characters:\", doubled_strings)\n"
+      ],
       "metadata": {
-        "id": "TvyLK6aekEq6"
+        "id": "TvyLK6aekEq6",
+        "outputId": "5f75be78-7b6b-4834-fa51-f573171d7f03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Doubled first two characters: ['rere', 'roro', 'rere', 'roro', 'rere', 'erer', '77', '88', '99', '1010']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -93,6 +268,55 @@
         "## Exercise 4\n",
         "\n",
         "Write a function `max_in_list()` that takes a list of numbers and returns the largest one using `reduce()` in lib `functools`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercise 4\n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "def max_in_list(numbers):\n",
+        "  \"\"\"\n",
+        "  Computes the maximum value in a list of numbers using reduce().\n",
+        "\n",
+        "  Args:\n",
+        "      numbers: List of numbers.\n",
+        "\n",
+        "  Returns:\n",
+        "      The maximum value in the list.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  if len(numbers) == 0:\n",
+        "    raise ValueError(\"Empty list\")\n",
+        "  return reduce(lambda x, y: max(x, y), numbers)\n",
+        "\n",
+        "# Define the list of numbers\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 99, 10]\n",
+        "\n",
+        "# Compute the maximum value\n",
+        "max_value = max_in_list(numbers)\n",
+        "\n",
+        "# Print the result\n",
+        "print(\"Maximum value:\", max_value)\n"
+      ],
+      "metadata": {
+        "id": "_fqu18JawOIh",
+        "outputId": "cf4a1e4d-f3e6-4394-a9c2-9fd7f9f1ebc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum value: 99\n"
+          ]
+        }
       ]
     },
     {
@@ -107,6 +331,54 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Exercise 5\n",
+        "\n",
+        "def triple(n):\n",
+        "  \"\"\"\n",
+        "  Triples a number.\n",
+        "\n",
+        "  Args:\n",
+        "      n: The number to triple.\n",
+        "\n",
+        "  Returns:\n",
+        "      The tripled number.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  return n * 3\n",
+        "\n",
+        "# Define the list of integers\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# Triple all numbers using map\n",
+        "tripled_numbers = map(triple, numbers)\n",
+        "\n",
+        "# Convert the map object to a list\n",
+        "tripled_numbers_list = list(tripled_numbers)\n",
+        "\n",
+        "# Print the tripled numbers\n",
+        "print(\"Tripled numbers:\", tripled_numbers_list)\n"
+      ],
+      "metadata": {
+        "id": "QREiRv2iwfQr",
+        "outputId": "0c511c12-cc2c-4f1b-9275-e8d2c67e64f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tripled numbers: [3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Exercise 6\n",
@@ -118,12 +390,68 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Exercise 6\n",
+        "\n",
+        "import multiprocessing as mp\n",
+        "import functools\n",
+        "\n",
+        "def square(x):\n",
+        "  \"\"\"\n",
+        "  Squares a number.\n",
+        "\n",
+        "  Args:\n",
+        "      x: The number to square.\n",
+        "\n",
+        "  Returns:\n",
+        "      The squared number.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  return x**2\n",
+        "\n",
+        "def main():\n",
+        "  \"\"\"\n",
+        "  Main function.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # Create a list of numbers\n",
+        "  numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "  # Create a pool of worker processes\n",
+        "  pool = mp.Pool()\n",
+        "\n",
+        "  # Apply the square function to each number in the list using map\n",
+        "  squared_numbers = pool.map(square, numbers)\n",
+        "\n",
+        "  # Close the pool of worker processes\n",
+        "  pool.close()\n",
+        "\n",
+        "  # Aggregate the squared numbers using reduce\n",
+        "  sum_of_squared_numbers = functools.reduce(lambda x, y: x + y, squared_numbers)\n",
+        "\n",
+        "  # Print the sum of squared numbers\n",
+        "  print(\"Sum of squared numbers:\", sum_of_squared_numbers)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  main()\n"
+      ],
       "metadata": {
-        "id": "4FUQmmUylEbl"
+        "id": "4FUQmmUylEbl",
+        "outputId": "bf103207-2613-47bf-ac01-f63d1cc12f07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sum of squared numbers: 385\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,12 +465,75 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Exercise 7\n",
+        "\n",
+        "import functools\n",
+        "\n",
+        "def map_reduce(data, map_func, reduce_func):\n",
+        "  \"\"\"\n",
+        "  Performs a MapReduce operation on the given data.\n",
+        "\n",
+        "  Args:\n",
+        "      data: The data to process.\n",
+        "      map_func: The map function to apply to each element of the data.\n",
+        "      reduce_func: The reduce function to aggregate the results of the map function.\n",
+        "\n",
+        "  Returns:\n",
+        "      The aggregated result of the MapReduce operation.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # Create a pool of worker processes\n",
+        "  pool = mp.Pool()\n",
+        "\n",
+        "  # Apply the map function to each element of the data using map\n",
+        "  mapped_data = pool.map(map_func, data)\n",
+        "\n",
+        "  # Close the pool of worker processes\n",
+        "  pool.close()\n",
+        "\n",
+        "  # Aggregate the mapped data using reduce\n",
+        "  reduced_result = functools.reduce(reduce_func, mapped_data)\n",
+        "\n",
+        "  # Return the aggregated result\n",
+        "  return reduced_result\n",
+        "\n",
+        "# Example usage:\n",
+        "\n",
+        "# Define the data\n",
+        "data = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# Define the map function\n",
+        "def square(x):\n",
+        "  return x**2\n",
+        "\n",
+        "# Define the reduce function\n",
+        "def sum(x, y):\n",
+        "  return x + y\n",
+        "\n",
+        "# Perform the MapReduce operation\n",
+        "result = map_reduce(data, square, sum)\n",
+        "\n",
+        "# Print the result\n",
+        "print(\"Result:\", result)\n"
+      ],
       "metadata": {
-        "id": "C9oaW2et6XV5"
+        "id": "C9oaW2et6XV5",
+        "outputId": "f60dbee3-1009-457e-d19e-894bb3d28438",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Result: 385\n"
+          ]
+        }
+      ]
     }
   ]
 }
