update and delete file

--- a/[Mid Exam] Lab4.ipynb
+++ b/[Mid Exam] Lab4.ipynb
@@ -1,28 +1,24 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ngoan22mse23088/BigData/blob/master/Lab4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "SUBJECT: BIG DATA </br>\n",
+        "CLASS : MSE12#HCM <br>\n",
+        "MSHV : 22MSE23088 </br>\n",
+        "MSE STUDENT's NAME : LE CHI NGOAN </br>\n",
+        "INSTRUCTOR: DR. MAI HOANG BAO AN"
       ]
     },
     {
@@ -48,6 +44,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TOXAEqkOu3HH",
+        "outputId": "cc489d29-fbe1-4b1d-88a7-e48e4ae929af"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[4, 12, 16, 32, 45, 60]\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 1\n",
         "\n",
@@ -80,23 +93,6 @@
         "# Compute and print the equation values\n",
         "equation_values = compute_equation(x, y, r)\n",
         "print(equation_values)\n"
-      ],
-      "metadata": {
-        "id": "TOXAEqkOu3HH",
-        "outputId": "cc489d29-fbe1-4b1d-88a7-e48e4ae929af",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[4, 12, 16, 32, 45, 60]\n"
-          ]
-        }
       ]
     },
     {
@@ -117,6 +113,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Te8H4F2jvZhS",
+        "outputId": "98158d04-290b-4686-8987-2de97d7df340"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Word lengths (for-loop): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n",
+            "Word lengths (map): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n",
+            "Word lengths (list comprehension): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 2\n",
         "\n",
@@ -176,25 +191,6 @@
         "print(\"Word lengths (for-loop):\", word_lengths_for_loop)\n",
         "print(\"Word lengths (map):\", word_lengths_map)\n",
         "print(\"Word lengths (list comprehension):\", word_lengths_comprehension)"
-      ],
-      "metadata": {
-        "id": "Te8H4F2jvZhS",
-        "outputId": "98158d04-290b-4686-8987-2de97d7df340",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Word lengths (for-loop): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n",
-            "Word lengths (map): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n",
-            "Word lengths (list comprehension): [4, 4, 7, 6, 3, 6, 1, 1, 1, 2]\n"
-          ]
-        }
       ]
     },
     {
@@ -212,6 +208,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TvyLK6aekEq6",
+        "outputId": "5f75be78-7b6b-4834-fa51-f573171d7f03"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Doubled first two characters: ['rere', 'roro', 'rere', 'roro', 'rere', 'erer', '77', '88', '99', '1010']\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 3\n",
         "\n",
@@ -240,23 +253,6 @@
         "\n",
         "# Print the results\n",
         "print(\"Doubled first two characters:\", doubled_strings)\n"
-      ],
-      "metadata": {
-        "id": "TvyLK6aekEq6",
-        "outputId": "5f75be78-7b6b-4834-fa51-f573171d7f03",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Doubled first two characters: ['rere', 'roro', 'rere', 'roro', 'rere', 'erer', '77', '88', '99', '1010']\n"
-          ]
-        }
       ]
     },
     {
@@ -272,6 +268,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_fqu18JawOIh",
+        "outputId": "cf4a1e4d-f3e6-4394-a9c2-9fd7f9f1ebc9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Maximum value: 99\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 4\n",
         "\n",
@@ -300,38 +313,38 @@
         "\n",
         "# Print the result\n",
         "print(\"Maximum value:\", max_value)\n"
-      ],
-      "metadata": {
-        "id": "_fqu18JawOIh",
-        "outputId": "cf4a1e4d-f3e6-4394-a9c2-9fd7f9f1ebc9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Maximum value: 99\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HH2WAgksg9wM"
+      },
       "source": [
         "## Exercise 5\n",
         "\n",
         "Using Python `map` to write a Python program to triple all numbers of a given list of integers."
-      ],
-      "metadata": {
-        "id": "HH2WAgksg9wM"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QREiRv2iwfQr",
+        "outputId": "0c511c12-cc2c-4f1b-9275-e8d2c67e64f2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tripled numbers: [3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 5\n",
         "\n",
@@ -359,37 +372,37 @@
         "\n",
         "# Print the tripled numbers\n",
         "print(\"Tripled numbers:\", tripled_numbers_list)\n"
-      ],
-      "metadata": {
-        "id": "QREiRv2iwfQr",
-        "outputId": "0c511c12-cc2c-4f1b-9275-e8d2c67e64f2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tripled numbers: [3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xv0H5iw_5_mm"
+      },
       "source": [
         "## Exercise 6\n",
         "Implement parallel processing using `map()` to apply a function across multiple elements of an iterable concurrently, and then use `reduce()` to aggregate the results."
-      ],
-      "metadata": {
-        "id": "xv0H5iw_5_mm"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4FUQmmUylEbl",
+        "outputId": "bf103207-2613-47bf-ac01-f63d1cc12f07"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sum of squared numbers: 385\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 6\n",
         "\n",
@@ -434,37 +447,37 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "  main()\n"
-      ],
-      "metadata": {
-        "id": "4FUQmmUylEbl",
-        "outputId": "bf103207-2613-47bf-ac01-f63d1cc12f07",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sum of squared numbers: 385\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IF_ouBU-6IYz"
+      },
       "source": [
         "## Exercise 7\n",
         "Implement a MapReduce-style function to process data distributed across multiple nodes or workers."
-      ],
-      "metadata": {
-        "id": "IF_ouBU-6IYz"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C9oaW2et6XV5",
+        "outputId": "f60dbee3-1009-457e-d19e-894bb3d28438"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Result: 385\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 7\n",
         "\n",
@@ -516,24 +529,22 @@
         "\n",
         "# Print the result\n",
         "print(\"Result:\", result)\n"
-      ],
-      "metadata": {
-        "id": "C9oaW2et6XV5",
-        "outputId": "f60dbee3-1009-457e-d19e-894bb3d28438",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Result: 385\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
