--- a/[Final Exam 1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
+++ b/[Final Exam 1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
@@ -1611,7 +1611,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Performance Optimization"
+        "## 5. Performance Optimization"
       ],
       "metadata": {
         "id": "CP2R-xp9jaG9"
@@ -1694,7 +1694,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Reporting and Visualization"
+        "## 6. Reporting and Visualization"
       ],
       "metadata": {
         "id": "Ehn3WYjgVanu"
