--- a/[Final Exam 1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
+++ b/[Final Exam 1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
@@ -1008,18 +1008,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# Create a heatmap with annotated values\n",
-        "sns.heatmap(corr_matrix, annot=True)"
-      ],
-      "metadata": {
-        "id": "JZA8FIUkL6Vk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Observations\n",
@@ -1611,7 +1599,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. Performance Optimization"
+        "## Performance Optimization"
       ],
       "metadata": {
         "id": "CP2R-xp9jaG9"
@@ -1694,7 +1682,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. Reporting and Visualization"
+        "## Reporting and Visualization"
       ],
       "metadata": {
         "id": "Ehn3WYjgVanu"
