--- a/[Final Exam 1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
+++ b/[Final Exam 1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
@@ -118,6 +118,7 @@
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
         "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "\n",
         "# Input data files are available in the \"../input/\" directory.\n",
         "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
