--- a/[Final_Exam_1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
+++ b/[Final_Exam_1] Analyzing_Sales_Data_with_Apache_Spark.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1656,7 +1655,7 @@
         "except Exception as e:\n",
         "    print(f\"An error occurred: {e}\")\n",
         "    # Handle the error or log it as needed\n",
-        "finally:\n",
+        "# finally:\n",
         "    # Close SparkContext to release resources\n",
         "    # if 'sc' in locals() and sc is not None:\n",
         "    #     sc.stop()\n",
@@ -1751,9 +1750,9 @@
       "source": [
         "# Revenue by week\n",
         "# Create new column weekday/month/year+quarter\n",
-        "df['ORDERDATE']=pd.to_datetime(df['ORDERDATE'])\n",
-        "df['ORDERDATE'].info()\n",
-        "df['WEEK_DAY']=df_org['ORDERDATE'].dt.strftime('%a')\n",
+        "df_org['ORDERDATE']=pd.to_datetime(df_org['ORDERDATE'])\n",
+        "df_org['ORDERDATE'].info()\n",
+        "df_org['WEEK_DAY']=df_org['ORDERDATE'].dt.strftime('%a')\n",
         "\n",
         "order=['Mon','Tue','Wed', 'Thu','Fri','Sat', 'Sun']\n",
         "weekly_revenue=df_org.groupby(['WEEK_DAY', 'YEAR_ID'])[['SALES']].sum().reset_index()\n",
@@ -1797,7 +1796,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Scatter plot with seaborn\n",
-        "sns.scatterplot(data=df, x='PRICEEACH', y='MSRP', hue='DEALSIZE')\n",
+        "sns.scatterplot(data=df_org, x='PRICEEACH', y='MSRP', hue='DEALSIZE')\n",
         "\n",
         "# Add a vertical line at x=26\n",
         "sns.lineplot(x=(26, 26), y=(100, 100), linestyle='--', color='r')\n",
@@ -1823,7 +1822,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Scatter plot with seaborn\n",
-        "sns.scatterplot(data=df, x='PRICEEACH', y='QUANTITYORDERED', hue='YEAR_ID')\n",
+        "sns.scatterplot(data=df_org, x='PRICEEACH', y='QUANTITYORDERED', hue='YEAR_ID')\n",
         "\n",
         "# Set plot title and axis labels\n",
         "plt.title(\"Unit Price x Q'ty Yearly Distribution\")\n",
